# simulacion-cola

./: README.md  pyproject.toml  requeriments.txt
examples/: baseline_config.json
src/mri_queue_sim/: cli.py  config.py  metrics.py  sim.py  viz_ursina.py
